--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -5,6 +5,9 @@
   </p>
   {{ end }}
 
+  <!-- Init code folding -->
+  {{ partial "article_footer_js.html" . }}
+
   <p class="powered-by">
     {{ with site.Copyright }}{{ replace . "{year}" now.Year | markdownify}} &middot; {{ end }}
 
